--- a/Monsters/Ki_Beasts.json
+++ b/Monsters/Ki_Beasts.json
@@ -30,7 +30,8 @@
     "regen_morale": true,
     "regenerates": 3,
     "luminance": 4,
-    "armor": { "bash": 18, "cut": 10, "acid": 6, "bullet": 12, "electric": 50, "heat": 10, "cold": 15, "biological": 6 },
+    "flags": [ "SEES", "HEARS", "PATH_AVOID_DANGER", "WARM", "ANIMAL" ],
+    "armor": { "bash": 20, "cut": 12, "acid": 8, "bullet": 18, "electric": 50, "heat": 10, "cold": 15, "biological": 10 },
     "attack_effs": [ { "id": "eff_gamb_lightningl", "duration": [ 3, 8 ], "chance": 10 } ],
     "emit_fields": [ { "emit_id": "emit_gamb_lightningl", "delay": "1 s" } ],
     "anger_triggers": [ "HURT", "PLAYER_CLOSE", "FRIEND_ATTACKED", "PLAYER_NEAR_BABY" ]
