--- a/Monsters/Ki_Beasts.json
+++ b/Monsters/Ki_Beasts.json
@@ -30,9 +30,9 @@
     "regen_morale": true,
     "regenerates": 3,
     "luminance": 4,
-    "flags": [ "SEES", "HEARS", "PATH_AVOID_DANGER", "WARM", "ANIMAL" ],
+    "flags": [ "SEES", "HEARS", "PATH_AVOID_DANGER", "WARM", "ANIMAL", "Ki_Electric" ],
     "armor": { "bash": 20, "cut": 12, "acid": 8, "bullet": 18, "electric": 50, "heat": 10, "cold": 15, "biological": 10 },
-    "attack_effs": [ { "id": "eff_gamb_lightningl", "duration": [ 3, 8 ], "chance": 10 } ],
+    "attack_effs": [ { "id": "eff_gamb_lightningl", "duration": [ 3, 8 ], "chance": 10, "affect_hit_bp": true } ],
     "emit_fields": [ { "emit_id": "emit_gamb_lightningl", "delay": "1 s" } ],
     "anger_triggers": [ "HURT", "PLAYER_CLOSE", "FRIEND_ATTACKED", "PLAYER_NEAR_BABY" ]
   },
@@ -51,7 +51,7 @@
     "intensity_levels": [
       {
         "name": "lightning wisps",
-        "sym": "Z",
+        "sym": ".",
         "color": "yellow",
         "dangerous": true,
         "light_emitted": 1,
@@ -59,38 +59,41 @@
           {
             "effect_id": "eff_gamb_lightningl",
             "intensity": 1,
+            "body_part": "Random",
             "min_duration": "4 seconds",
-            "max_duration": "40 seconds",
+            "max_duration": "8 seconds",
             "is_environmental": false
           }
         ]
       },
       {
         "name": "lightning tendrils",
-        "sym": "Z",
+        "sym": "*",
         "color": "yellow",
         "light_emitted": 1.7,
         "effects": [
           {
             "effect_id": "eff_gamb_lightningl",
             "intensity": 2,
+            "body_part": "Random",
             "min_duration": "6 seconds",
-            "max_duration": "50 seconds",
+            "max_duration": "12 seconds",
             "is_environmental": false
           }
         ]
       },
       {
         "name": "lightning torrents",
-        "sym": "Z",
+        "sym": "~",
         "color": "yellow",
         "light_emitted": 3,
         "effects": [
           {
             "effect_id": "eff_gamb_lightningl",
             "intensity": 3,
+            "body_part": "Random",
             "min_duration": "8 seconds",
-            "max_duration": "60 seconds",
+            "max_duration": "16 seconds",
             "is_environmental": false
           }
         ]
@@ -102,7 +105,7 @@
     "percent_spread": 10,
     "outdoor_age_speedup": "0 turns",
     "priority": 8,
-    "half_life": "5 seconds",
+    "half_life": "6 seconds",
     "phase": "gas",
     "accelerated_decay": true,
     "display_field": true,
